# unforeseen-conspiracy-inc

./: .cursorrules  CHANGELOG.md  CONSPIRACIES.md  README.md  components.json  eslint.config.mjs  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  unforeseen-conspiracy-inc.code-workspace  vite.config.ts
.github/: SECURITY.md  config.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
public/: site.webmanifest
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/discord/: mod.rs
src/components/: BulkBuyButtons.tsx  GeneratorCard.tsx  Layout.tsx  LocaleSwitch.tsx  ResourceCard.tsx
src/data/: bootloader.ts  changelog.ts  clicker.ts  constants.ts  generators.ts  i18n.ts  resources.ts  upgrades.ts  version.ts
src/hooks/: useGameLifecycle.ts  useMediaQuery.ts  useScrollNavbar.ts
src/i18n/: en.ts  fr.ts  i18n.ts
src/pages/: BootloaderPage.tsx  GamePage.tsx  LauncherPage.tsx
src/scripts/: bumpversion.ts  version.ts
src/store/: ClickerStore.ts  GameStore.spec.ts  GameStore.ts  GeneratorStore.spec.ts  GeneratorStore.ts  HudStore.ts  ResourceStore.ts  RoutingStore.ts  SaveStore.ts  StatisticsStore.ts  Store.spec.ts  Store.ts  StoreContext.spec.ts  StoreContext.ts  UpdaterStore.ts  UpgradeStore.ts  index.tsx
src/styles/: fonts.css  globals.css  index.css
src/types/: clicker.ts  game.ts  generators.ts  i18n.ts  resources.ts  routes.ts  upgrades.ts
src/utils/: _assertMgt.spec.ts  (+8 more)
(+33 files in other folders)
