[package]
name = "unforeseen-conspiracy-inc"
version = "0.0.4"
description = "Unforeseen Conspiracy Inc."
authors = ["Matthieu Locussol <dev.matthieu.locussol@gmail.com> (https://www.matthieu-locussol.com)"]
license = ""
repository = "git@github.com:matthieu-locussol/unforeseen-conspiracy-inc.git"
default-run = "unforeseen-conspiracy-inc"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "unforeseen_conspiracy_inc_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.5.0", features = [] }
tauri-plugin-log = "2.0.0-rc"
discord-rich-presence = "0.2.5"
